--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,11 +1,20 @@
 <div class="row">
+	<!-- <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
   <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
-  <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
-  <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
-</div>
-    
-<div class="row">
-  <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
-  <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
-  <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
+  <app-product class="col-lg-4 col-md-6 mb-4"></app-product> -->
+	<div class="col-lg-4 col-md-6 mb-4">
+		<div class="card h-100">
+			<a href="#"><img class="card-img-top" alt=""></a>
+				<div class="card-body">
+					<h4 class="card-title">
+						<a href="#">Product name</a>
+					</h4>
+					<h5>27471</h5>
+					<p class="card-text">Cai nay hay</p>
+				</div>
+				<div class="card-footer">
+
+				</div>
+		</div>
+	</div>
 </div>
