--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -4,16 +4,15 @@
   <app-product class="col-lg-4 col-md-6 mb-4"></app-product> -->
 	<div class="col-lg-4 col-md-6 mb-4">
 		<div class="card h-100">
-			<a href="#"><img class="card-img-top" alt=""></a>
+			<a href="#"><img class="card-img-top" *ngFor="let product of products"></a>
 				<div class="card-body">
 					<h4 class="card-title">
-						<a href="#">Product name</a>
+						<a href="#">{{product.name}}</a>
 					</h4>
-					<h5>27471</h5>
-					<p class="card-text">Cai nay hay</p>
+					<h5>{{product.price}}</h5>
+					<p class="card-text">{{product.desc}}</p>
 				</div>
 				<div class="card-footer">
-
 				</div>
 		</div>
 	</div>
