7 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,7 @@
 
        <app-slide></app-slide>
       <app-product-list></app-product-list>
+      <app-manager-product></app-manager-product>
 
         <!-- /.row -->
 
