--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,17 +2,16 @@
 	<!-- <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
   <app-product class="col-lg-4 col-md-6 mb-4"></app-product>
   <app-product class="col-lg-4 col-md-6 mb-4"></app-product> -->
-	<div class="col-lg-4 col-md-6 mb-4">
+	<div class="col-lg-4 col-md-6 mb-4" *ngFor="let product of products">
 		<div class="card h-100">
-			<a href="#"><img class="card-img-top" *ngFor="let product of products"></a>
+			<a href="#"><img class="card-img-top" ></a>
 				<div class="card-body">
 					<h4 class="card-title">
 						<a href="#">{{product.name}}</a>
 					</h4>
 					<h5>{{product.price}}</h5>
 					<p class="card-text">{{product.desc}}</p>
-				</div>
-				<div class="card-footer">
+					<button (click)="hienthi(product)">Chi tiết</button>
 				</div>
 		</div>
 	</div>
