2 files modified, 3 added

--- a/src/app/manager-product/manager-product.component.html
+++ b/src/app/manager-product/manager-product.component.html
@@ -31,5 +31,6 @@
           <h5>{{selected.price}}</h5>
           <h5>{{selected.desc}}</h5>
 				</div>
+        <app-detail [detail]="selected"></app-detail>
 		</div>
 	</div>
