--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,3 +1,5 @@
 <h4>ID : {{detail.id}}<br>
 Name : {{detail.name}}<br>
-Price :{{detail.price}}</h4>
+Price :{{detail.price}}
+Describe :{{detail.desc}}
+</h4>
