--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,5 +1,5 @@
 <h4>ID : {{detail.id}}<br>
 Name : {{detail.name}}<br>
-Price :{{detail.price}}
+Price :{{detail.price}}<br>
 Describe :{{detail.desc}}
 </h4>
