--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,7 @@
       <div class="col-lg-9">
 
        <app-slide></app-slide>
+       <app-product-add></app-product-add>
       <app-product-list></app-product-list>
       <app-manager-product></app-manager-product>
 
