--- a/src/app/product-add/product-add.component.html
+++ b/src/app/product-add/product-add.component.html
@@ -17,4 +17,4 @@
     <input type="text" class="form-control" name="desc" id="exampleInputPassword1"[(ngModel)]="product.desc">
   </div>
   <button type="button" class="btn btn-primary" (click)="addProduct()">Add product</button>
-</form>
+</form><br>
